--- a/pipeline.html
+++ b/pipeline.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1>Version 1, yes pipeline</h1>
+    <h1>Version 2, pipeline update</h1>
   </body>
 </html>
