--- a/pipeline.html
+++ b/pipeline.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1>Version 5, demo2, Jenkinsfile added</h1>
+    <h1>Version 6, demo2, Jenkins Webhook added</h1>
   </body>
 </html>
