--- a/pipeline.html
+++ b/pipeline.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <h1>Version 17, testing Jenkins Webhook</h1>
+    <h1>Welcome to our Jenkins pipeline. Version 1</h1>
   </body>
 </html>
